Reorganize build to better support Java 11+