@@ -90,9 +90,14 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>${target.jdk}</source>
-                    <target>${target.jdk}</target>
                     <compilerArgument>-Xlint:unchecked</compilerArgument>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
 
@@ -427,22 +432,38 @@
 
     <profiles>
         <profile>
-            <!-- JDK9 removed the Nameservice SPI as per bug 8134577. There's no replacement. -->
-            <id>no-spi-on-java9</id>
+            <id>java8</id>
             <activation>
-                <jdk>[1.9,)</jdk>
+                <jdk>[,9)</jdk>
             </activation>
-
-            <properties>
-                <target.jdk>11</target.jdk>
-                <maven.compiler.release>${target.jdk}</maven.compiler.release>
-            </properties>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
                         <configuration>
+                            <source>${target.jdk}</source>
+                            <target>${target.jdk}</target>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <!-- JDK9 removed the Nameservice SPI as per bug 8134577. There's no replacement. -->
+            <id>no-spi-on-java9</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <release>${target.jdk}</release>
                             <excludes>
                                 <exclude>org/xbill/DNS/spi/**</exclude>
                             </excludes>
@@ -454,6 +475,16 @@
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <configuration>
                             <excludePackageNames>*.spi</excludePackageNames>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                --add-opens java.base/sun.net.dns=ALL-UNNAMED
+                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
